# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/android/settings.gni")
import("//build/config/sanitizers/sanitizers.gni")

assert(is_android)

# This is included by reference in the //build/config/compiler config that
# is applied to all targets. It is here to separate out the logic that is
# Android-only.
config("compiler") {
  cflags = [
    "-ffunction-sections",
    "-fno-short-enums",
  ]
  defines = [
    "ANDROID",

    # The NDK has these things, but doesn't define the constants to say that it
    # does. Define them here instead.
    "HAVE_SYS_UIO_H",

    # Forces full rebuilds on NDK rolls.
    "ANDROID_NDK_VERSION=${android_ndk_version}",
  ]

  _rebased_android_toolchain_root =
      rebase_path(android_toolchain_root, root_build_dir)

  assert(_rebased_android_toolchain_root != "")  # Mark as used.
  if (current_cpu == "mipsel" || current_cpu == "mips64el") {
    cflags += [
      # TODO(gordanac) Enable integrated-as.
      "-fno-integrated-as",
      "-B${_rebased_android_toolchain_root}/bin",  # Else /usr/bin/as gets picked up.
    ]
  }

  ldflags = [
    "-Wl,--build-id=sha1",
    "-Wl,--no-undefined",

    # Don't allow visible symbols from libgcc or libc++ to be
    # re-exported.
    "-Wl,--exclude-libs=libgcc.a",
    "-Wl,--exclude-libs=libc++_static.a",
  ]

  if (current_cpu == "arm") {
    abi_target = "arm-linux-androideabi"
  } else if (current_cpu == "x86") {
    abi_target = "i686-linux-androideabi"
  } else if (current_cpu == "arm64") {
    abi_target = "aarch64-linux-android"
  } else if (current_cpu == "x64") {
    # Place holder for x64 support, not tested.
    # TODO: Enable clang support for Android x64. http://crbug.com/539781
    abi_target = "x86_64-linux-androideabi"
  } else if (current_cpu == "mipsel") {
    abi_target = "mipsel-linux-android"
  } else if (current_cpu == "mips64el") {
    # Place holder for mips64 support, not tested.
    abi_target = "mips64el-linux-androideabi"
  } else {
    assert(false, "Architecture not supported")
  }
  cflags += [ "--target=$abi_target" ]
  ldflags += [ "--target=$abi_target" ]

  # Assign any flags set for the C compiler to asmflags so that they are sent
  # to the assembler.
  asmflags = cflags
}

# This is included by reference in the //build/config:runtime_library
# config that is applied to all targets. It is here to separate out the logic
# that is Android-only. Please see that target for advice on what should go in
# :runtime_library vs. :compiler.
config("runtime_library") {
  # NOTE: The libc++ header include paths below are specified in cflags_cc
  # rather than include_dirs because they need to come after include_dirs.
  # Think of them like system headers, but don't use '-isystem' because the
  # arm-linux-androideabi-4.4.3 toolchain (circa Gingerbread) will exhibit
  # strange errors. The include ordering here is important; change with
  # caution.
  cflags_cc = []

  assert(android_ndk_major_version >= 25, "Android NDK older than r25b are not supported")

  cflags_cc += [
    # "-isystem" + rebase_path("$android_libcpp_root/include", root_build_dir),
    # "-isystem" + rebase_path("$android_ndk_root/sources/cxx-stl/llvm-libc++abi/include", root_build_dir),
    "-isystem" +
        rebase_path("$android_ndk_root/sources/android/support/include",
                    root_build_dir),
  ]

  defines = [ "__GNU_SOURCE=1" ]  # Necessary for clone().
  ldflags = [ "-nostartfiles" ]
  lib_dirs = [ android_libcpp_lib_dir ]

  # The libc++ runtime library (must come first).
  # ASan needs to dynamically link to libc++ even in static builds so
  # that it can interpose operator new.
  if (is_asan) {
    libs = [ "c++_shared" ]
  } else {
    libs = [ "c++_static" ]
  }
  libs += [ "c++abi" ]

  if (current_cpu == "arm" || current_cpu == "x86") {
    libs += [ "android_support" ]
  }

  # Manually link the libgcc.a that the cross compiler uses. This is
  # absolute because the linker will look inside the sysroot if it's not.
  libs += [ "unwind", "c" ]

  # Work around incompatibilities between bionic and clang headers.
  defines += [
    "__compiler_offsetof=__builtin_offsetof",
    "nan=__builtin_nan",
  ]

  if (current_cpu == "x64" || current_cpu == "arm64" ||
      current_cpu == "mips64el") {
    # 64-bit targets build with NDK 21, 32-bit targets with NDK 16
    # (see ./config.gni).  When using clang, NDK 21 defines snprintf to
    # something for a kind of for of _FORTIFY_SOURCE support, see
    # third_party/android_tools/ndk/platforms/android-21/arch-x86_64/usr/include/stdio.h
    # Making snprintf a macro breaks base/strings/string_utils.h which
    # defines base::snprintf().  So define snprintf to itself to force the
    # NDK to not redefine it.  This disables _chk for snprintf, but since
    # 32-bit versions use NDK 16 which doesn't have any fortify support, that
    # seems ok.  b/32067310 tracks better fortify support with clang.
    # TODO(thakis): Remove this once b/32067310 is fixed.
    defines += [ "snprintf=snprintf" ]
  }

  # TODO(jdduke) Re-enable on mips after resolving linking
  # issues with libc++ (crbug.com/456380).
  if (current_cpu != "mipsel" && current_cpu != "mips64el") {
    ldflags += [ "-Wl,--warn-shared-textrel" ]
  }
}

config("executable_config") {
  cflags = [ "-fPIE" ]
  asmflags = [ "-fPIE" ]
  ldflags = [ "-pie" ]
}

# Instrumentation -------------------------------------------------------------
#
# The BUILDCONFIG file sets the "default_cygprofile_instrumentation" config on
# targets by default. You can override whether the cygprofile instrumentation is
# used on a per-target basis:
#
# configs -= [ "//build/config/android:default_cygprofile_instrumentation" ]
# configs += [ "//build/config/android:no_cygprofile_instrumentation" ]

config("default_cygprofile_instrumentation") {
  if (use_order_profiling) {
    configs = [ ":cygprofile_instrumentation" ]
  } else {
    configs = [ ":no_cygprofile_instrumentation" ]
  }
}

config("cygprofile_instrumentation") {
  defines = [ "CYGPROFILE_INSTRUMENTATION=1" ]
  cflags = [ "-finstrument-functions" ]
}

config("no_cygprofile_instrumentation") {
}
